--- a/param_templates/input_nml.yaml
+++ b/param_templates/input_nml.yaml
@@ -37,9 +37,9 @@ assim_tools_nml:
   sort_obs_inc:
     values: true
   special_localization_cutoffs:
-    values: null
+    values: ''
   special_localization_obs_types:
-    values: null
+    values: ''
   spread_restoration:
     values: false
 cov_cutoff_nml:
