--- a/param_templates/input_nml.yaml
+++ b/param_templates/input_nml.yaml
@@ -37,9 +37,9 @@ assim_tools_nml:
   sort_obs_inc:
     values: true
   special_localization_cutoffs:
-    values: ''
+    values: -888888
   special_localization_obs_types:
-    values: ''
+    values: 'null'
   spread_restoration:
     values: false
 cov_cutoff_nml:
@@ -194,15 +194,15 @@ location_nml:
   print_box_level:
     values: 0
   special_vert_normalization_heights:
-    values: ''
+    values: -888888
   special_vert_normalization_levels:
-    values: ''
+    values: -888888
   special_vert_normalization_obs_types:
-    values: ''
+    values: 'null'
   special_vert_normalization_pressures:
-    values: ''
+    values: -888888
   special_vert_normalization_scale_heights:
-    values: ''
+    values: -888888
   vert_normalization_height:
     values: 10000.0
   vert_normalization_level:
@@ -223,7 +223,7 @@ model_nml:
   ocean_geometry:
     values: ocean_geometry.nc
   static_file:
-    values: c.e22.GMOM.T62_g16.nuopc.001.mom6.static.nc
+    values: static.nc
   template_file:
     values: mom6.r.nc
   use_pseudo_depth:
